changed show method in CategoryController
